--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 		<img class="runningAnimation" id="f3" src="images/frame3.PNG">
 		<img class="runningAnimation" id="f4" src="images/frame4.PNG">
 		<img class="runningAnimation" id="f5" src="images/frame5.PNG">
-		<br>
+		<img class="birdAnimation" id="Bf1" src="images/birdFrame1.PNG">
+		<img class="birdAnimation" id="Bf2" src="images/birdFrame2.PNG">
+		<img class="birdAnimation" id="Bf3" src="images/birdFrame3.PNG">
+		<img class="birdAnimation" id="Bf4" src="images/birdFrame4.PNG">
 		<canvas id="gameCanvas" width="600" height="200"></canvas>
 		<br>
 		<button class="bClick" id="button">Start</button>
