Random generation complete, adjustable. Background moving smoothly. Need to document and comment, and need to work on the unit collision and score

--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
 		<img class="runningAnimation" id="f1" src="images/frame1.PNG">
 		<img class="runningAnimation" id="f2" src="images/frame2.PNG">
 		<img class="runningAnimation" id="f3" src="images/frame3.PNG">
-		<img class="runningAnimation" id="f4" src="images/frame4.PNG">
-		<img class="runningAnimation" id="f5" src="images/frame5.PNG">
-		<img class="birdAnimation" id="Bf1" src="images/birdFrame1.PNG">
-		<img class="birdAnimation" id="Bf2" src="images/birdFrame2.PNG">
-		<img class="birdAnimation" id="Bf3" src="images/birdFrame3.PNG">
-		<img class="birdAnimation" id="Bf4" src="images/birdFrame4.PNG">
-		<img class="element obstacle"src="images/obstacle1.png">
-		<img class="element obstacle"src="images/obstacle2.png">
+		<img class="runningAnimation" id="f4" src="images/frame4.png">
+		<img class="runningAnimation" id="f5" src="images/frame5.png">
+		<img class="runningAnimation" id="f5" src="images/frame6.PNG">
+		<img class="birdAnimation" id="Bf1" src="images/birdFrame1.png">
+		<img class="birdAnimation" id="Bf2" src="images/birdFrame2.png">
+		<img class="birdAnimation" id="Bf3" src="images/birdFrame3.png">
+		<img class="birdAnimation" id="Bf4" src="images/birdFrame4.png">
+		<img class="element obstacle" src="images/obstacle0.png">
+		<img class="element obstacle" src="images/obstacle1.png">
+		<img class="element obstacle" src="images/obstacle2.png">
 		<img class="element" id="ground" src="images/ground.png">
 		<img class="element" id="background" src="images/background.png">
 		<canvas id="gameCanvas" width="600" height="200"></canvas>
